uf-6758: Removed validation on body in bodyInformation
Also updated truststore for cloudflare
